adding lambdas/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program_helper -> declaration program_helper
Rule 2     program_helper -> definition program_helper
Rule 3     program_helper -> declaration
Rule 4     program_helper -> definition
Rule 5     using -> USING PRINT SEMICOLON using
Rule 6     using -> USING GETARRAY SEMICOLON using
Rule 7     using -> USING CREATEARRAY SEMICOLON using
Rule 8     using -> empty
Rule 9     program -> using program_helper
Rule 10    declaration -> DECL VARIABLE LPAREN arguments RPAREN type
Rule 11    declaration -> DECL VARIABLE LPAREN empty_args RPAREN type
Rule 12    definition -> DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
Rule 13    definition -> DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE
Rule 14    type -> COLON TYPE_INT
Rule 15    type -> COLON TYPE_FLOAT
Rule 16    type -> COLON TYPE_VOID
Rule 17    type -> COLON TYPE_STRING
Rule 18    type -> COLON TYPE_BOOLEAN
Rule 19    empty -> <empty>
Rule 20    empty_args -> <empty>
Rule 21    empty_args_inv -> <empty>
Rule 22    args -> VARIABLE type COMMA args
Rule 23    args -> VARIABLE type
Rule 24    arguments -> args
Rule 25    args_inv -> expression COMMA args_inv
Rule 26    args_inv -> expression
Rule 27    arguments_funinvocation -> args_inv
Rule 28    arguments_funinvocation -> empty_args_inv
Rule 29    stats -> statment
Rule 30    stats -> statment stats
Rule 31    statments -> stats
Rule 32    def_stats -> def_statment
Rule 33    def_stats -> def_statment def_stats
Rule 34    def_statments -> def_stats
Rule 35    def_statment -> statment_expression
Rule 36    def_statment -> if
Rule 37    def_statment -> if_else
Rule 38    def_statment -> while
Rule 39    def_statment -> var_decl
Rule 40    def_statment -> var_assign
Rule 41    def_statment -> array_decl
Rule 42    def_statment -> array_assign
Rule 43    def_statment -> print
Rule 44    block -> LBRACE statments RBRACE
Rule 45    block -> LBRACE empty RBRACE
Rule 46    def_block -> def_statments
Rule 47    def_block -> empty
Rule 48    statment -> return
Rule 49    statment -> statment_expression
Rule 50    statment -> if
Rule 51    statment -> if_else
Rule 52    statment -> while
Rule 53    statment -> var_decl
Rule 54    statment -> var_assign
Rule 55    statment -> array_decl
Rule 56    statment -> array_assign
Rule 57    statment -> print
Rule 58    print_helper -> COMMA expression
Rule 59    print_helper -> COMMA expression print_helper
Rule 60    print -> PRINT LPAREN STRING print_helper RPAREN SEMICOLON
Rule 61    print -> PRINT LPAREN STRING empty RPAREN SEMICOLON
Rule 62    return -> RETURN empty_args SEMICOLON
Rule 63    return -> RETURN expression SEMICOLON
Rule 64    return -> RETURN lambda_expression SEMICOLON
Rule 65    statment_expression -> expression SEMICOLON
Rule 66    if -> IF expression block
Rule 67    if_else -> IF expression block ELSE block
Rule 68    while -> WHILE expression block
Rule 69    var_decl -> VARIABLE type EQUALS expression SEMICOLON
Rule 70    var_decl -> VARIABLE type EQUALS lambda_expression SEMICOLON
Rule 71    create_array -> CREATEARRAY LPAREN expression RPAREN
Rule 72    array_decl -> VARIABLE type LBRACKET expression RBRACKET SEMICOLON
Rule 73    array_decl -> VARIABLE type EQUALS create_array SEMICOLON
Rule 74    var_assign -> VARIABLE EQUALS expression SEMICOLON
Rule 75    var_assign -> VARIABLE EQUALS lambda_expression SEMICOLON
Rule 76    array_assign -> VARIABLE LBRACKET expression RBRACKET EQUALS expression SEMICOLON
Rule 77    lambda_args -> VARIABLE type
Rule 78    lambda_args -> VARIABLE type COMMA lambda_args
Rule 79    lambda_expression -> LAMBDA lambda_args COLON expression
Rule 80    lambda_expression -> LAMBDA empty COLON expression
Rule 81    expression -> expression PLUS expression
Rule 82    expression -> expression MINUS expression
Rule 83    expression -> expression TIMES expression
Rule 84    expression -> expression DIVIDE expression
Rule 85    expression -> expression MOD expression
Rule 86    expression -> expression AND expression
Rule 87    expression -> expression OR expression
Rule 88    expression -> expression EQUALS_EQUALS expression
Rule 89    expression -> expression NOT_EQUALS expression
Rule 90    expression -> expression GREATER expression
Rule 91    expression -> expression LESS expression
Rule 92    expression -> expression GREATER_EQUAL expression
Rule 93    expression -> expression LESS_EQUAL expression
Rule 94    expression -> MINUS expression
Rule 95    expression -> LPAREN expression RPAREN
Rule 96    expression -> LPAREN lambda_expression RPAREN
Rule 97    expression -> FLOAT
Rule 98    expression -> INT
Rule 99    expression -> STRING
Rule 100   expression -> VARIABLE
Rule 101   expression -> TRUE
Rule 102   expression -> FALSE
Rule 103   expression -> NOT_UNARY expression
Rule 104   get_array -> GETARRAY LPAREN VARIABLE RPAREN
Rule 105   expression -> VARIABLE LBRACKET expression RBRACKET
Rule 106   expression -> get_array LBRACKET expression RBRACKET
Rule 107   expression -> VARIABLE LPAREN arguments_funinvocation RPAREN
Rule 108   expression -> VARIABLE LPAREN arguments_funinvocation RPAREN LPAREN arguments_funinvocation RPAREN

Terminals, with rules where they appear

AND                  : 86
COLON                : 14 15 16 17 18 79 80
COMMA                : 22 25 58 59 78
CREATEARRAY          : 7 71
DECL                 : 10 11
DEF                  : 12 13
DIVIDE               : 84
ELSE                 : 67
EQUALS               : 69 70 73 74 75 76
EQUALS_EQUALS        : 88
FALSE                : 102
FLOAT                : 97
GETARRAY             : 6 104
GREATER              : 90
GREATER_EQUAL        : 92
IF                   : 66 67
INT                  : 98
LAMBDA               : 79 80
LBRACE               : 12 13 44 45
LBRACKET             : 72 76 105 106
LESS                 : 91
LESS_EQUAL           : 93
LPAREN               : 10 11 12 13 60 61 71 95 96 104 107 108 108
MINUS                : 82 94
MOD                  : 85
NOT_EQUALS           : 89
NOT_UNARY            : 103
OR                   : 87
PLUS                 : 81
PRINT                : 5 60 61
RBRACE               : 12 13 44 45
RBRACKET             : 72 76 105 106
RETURN               : 62 63 64
RPAREN               : 10 11 12 13 60 61 71 95 96 104 107 108 108
SEMICOLON            : 5 6 7 60 61 62 63 64 65 69 70 72 73 74 75 76
STRING               : 60 61 99
TIMES                : 83
TRUE                 : 101
TYPE_BOOLEAN         : 18
TYPE_FLOAT           : 15
TYPE_INT             : 14
TYPE_STRING          : 17
TYPE_VOID            : 16
USING                : 5 6 7
VARIABLE             : 10 11 12 13 22 23 69 70 72 73 74 75 76 77 78 100 104 105 107 108
WHILE                : 68
error                : 

Nonterminals, with rules where they appear

args                 : 22 24
args_inv             : 25 27
arguments            : 10 12
arguments_funinvocation : 107 108 108
array_assign         : 42 56
array_decl           : 41 55
block                : 66 67 67 68
create_array         : 73
declaration          : 1 3
def_block            : 12 13
def_statment         : 32 33
def_statments        : 46
def_stats            : 33 34
definition           : 2 4
empty                : 8 45 47 61 80
empty_args           : 11 13 62
empty_args_inv       : 28
expression           : 25 26 58 59 63 65 66 67 68 69 71 72 74 76 76 79 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 95 103 105 106
get_array            : 106
if                   : 36 50
if_else              : 37 51
lambda_args          : 78 79
lambda_expression    : 64 70 75 96
print                : 43 57
print_helper         : 59 60
program              : 0
program_helper       : 1 2 9
return               : 12 13 48
statment             : 29 30
statment_expression  : 35 49
statments            : 44
stats                : 30 31
type                 : 10 11 12 13 22 23 69 70 72 73 77 78
using                : 5 6 7 9
var_assign           : 40 54
var_decl             : 39 53
while                : 38 52

Parsing method: LALR

state 0

    (0) S' -> . program
    (9) program -> . using program_helper
    (5) using -> . USING PRINT SEMICOLON using
    (6) using -> . USING GETARRAY SEMICOLON using
    (7) using -> . USING CREATEARRAY SEMICOLON using
    (8) using -> . empty
    (19) empty -> .

    USING           shift and go to state 3
    DECL            reduce using rule 19 (empty -> .)
    DEF             reduce using rule 19 (empty -> .)

    program                        shift and go to state 1
    using                          shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (9) program -> using . program_helper
    (1) program_helper -> . declaration program_helper
    (2) program_helper -> . definition program_helper
    (3) program_helper -> . declaration
    (4) program_helper -> . definition
    (10) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (11) declaration -> . DECL VARIABLE LPAREN empty_args RPAREN type
    (12) definition -> . DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (13) definition -> . DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    DECL            shift and go to state 8
    DEF             shift and go to state 9

    program_helper                 shift and go to state 5
    declaration                    shift and go to state 6
    definition                     shift and go to state 7

state 3

    (5) using -> USING . PRINT SEMICOLON using
    (6) using -> USING . GETARRAY SEMICOLON using
    (7) using -> USING . CREATEARRAY SEMICOLON using

    PRINT           shift and go to state 10
    GETARRAY        shift and go to state 11
    CREATEARRAY     shift and go to state 12


state 4

    (8) using -> empty .

    DECL            reduce using rule 8 (using -> empty .)
    DEF             reduce using rule 8 (using -> empty .)


state 5

    (9) program -> using program_helper .

    $end            reduce using rule 9 (program -> using program_helper .)


state 6

    (1) program_helper -> declaration . program_helper
    (3) program_helper -> declaration .
    (1) program_helper -> . declaration program_helper
    (2) program_helper -> . definition program_helper
    (3) program_helper -> . declaration
    (4) program_helper -> . definition
    (10) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (11) declaration -> . DECL VARIABLE LPAREN empty_args RPAREN type
    (12) definition -> . DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (13) definition -> . DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    $end            reduce using rule 3 (program_helper -> declaration .)
    DECL            shift and go to state 8
    DEF             shift and go to state 9

    declaration                    shift and go to state 6
    program_helper                 shift and go to state 13
    definition                     shift and go to state 7

state 7

    (2) program_helper -> definition . program_helper
    (4) program_helper -> definition .
    (1) program_helper -> . declaration program_helper
    (2) program_helper -> . definition program_helper
    (3) program_helper -> . declaration
    (4) program_helper -> . definition
    (10) declaration -> . DECL VARIABLE LPAREN arguments RPAREN type
    (11) declaration -> . DECL VARIABLE LPAREN empty_args RPAREN type
    (12) definition -> . DEF VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (13) definition -> . DEF VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    $end            reduce using rule 4 (program_helper -> definition .)
    DECL            shift and go to state 8
    DEF             shift and go to state 9

    definition                     shift and go to state 7
    program_helper                 shift and go to state 14
    declaration                    shift and go to state 6

state 8

    (10) declaration -> DECL . VARIABLE LPAREN arguments RPAREN type
    (11) declaration -> DECL . VARIABLE LPAREN empty_args RPAREN type

    VARIABLE        shift and go to state 15


state 9

    (12) definition -> DEF . VARIABLE LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (13) definition -> DEF . VARIABLE LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    VARIABLE        shift and go to state 16


state 10

    (5) using -> USING PRINT . SEMICOLON using

    SEMICOLON       shift and go to state 17


state 11

    (6) using -> USING GETARRAY . SEMICOLON using

    SEMICOLON       shift and go to state 18


state 12

    (7) using -> USING CREATEARRAY . SEMICOLON using

    SEMICOLON       shift and go to state 19


state 13

    (1) program_helper -> declaration program_helper .

    $end            reduce using rule 1 (program_helper -> declaration program_helper .)


state 14

    (2) program_helper -> definition program_helper .

    $end            reduce using rule 2 (program_helper -> definition program_helper .)


state 15

    (10) declaration -> DECL VARIABLE . LPAREN arguments RPAREN type
    (11) declaration -> DECL VARIABLE . LPAREN empty_args RPAREN type

    LPAREN          shift and go to state 20


state 16

    (12) definition -> DEF VARIABLE . LPAREN arguments RPAREN type LBRACE def_block return RBRACE
    (13) definition -> DEF VARIABLE . LPAREN empty_args RPAREN type LBRACE def_block return RBRACE

    LPAREN          shift and go to state 21


state 17

    (5) using -> USING PRINT SEMICOLON . using
    (5) using -> . USING PRINT SEMICOLON using
    (6) using -> . USING GETARRAY SEMICOLON using
    (7) using -> . USING CREATEARRAY SEMICOLON using
    (8) using -> . empty
    (19) empty -> .

    USING           shift and go to state 3
    DECL            reduce using rule 19 (empty -> .)
    DEF             reduce using rule 19 (empty -> .)

    using                          shift and go to state 22
    empty                          shift and go to state 4

state 18

    (6) using -> USING GETARRAY SEMICOLON . using
    (5) using -> . USING PRINT SEMICOLON using
    (6) using -> . USING GETARRAY SEMICOLON using
    (7) using -> . USING CREATEARRAY SEMICOLON using
    (8) using -> . empty
    (19) empty -> .

    USING           shift and go to state 3
    DECL            reduce using rule 19 (empty -> .)
    DEF             reduce using rule 19 (empty -> .)

    using                          shift and go to state 23
    empty                          shift and go to state 4

state 19

    (7) using -> USING CREATEARRAY SEMICOLON . using
    (5) using -> . USING PRINT SEMICOLON using
    (6) using -> . USING GETARRAY SEMICOLON using
    (7) using -> . USING CREATEARRAY SEMICOLON using
    (8) using -> . empty
    (19) empty -> .

    USING           shift and go to state 3
    DECL            reduce using rule 19 (empty -> .)
    DEF             reduce using rule 19 (empty -> .)

    using                          shift and go to state 24
    empty                          shift and go to state 4

state 20

    (10) declaration -> DECL VARIABLE LPAREN . arguments RPAREN type
    (11) declaration -> DECL VARIABLE LPAREN . empty_args RPAREN type
    (24) arguments -> . args
    (20) empty_args -> .
    (22) args -> . VARIABLE type COMMA args
    (23) args -> . VARIABLE type

    RPAREN          reduce using rule 20 (empty_args -> .)
    VARIABLE        shift and go to state 25

    arguments                      shift and go to state 26
    empty_args                     shift and go to state 27
    args                           shift and go to state 28

state 21

    (12) definition -> DEF VARIABLE LPAREN . arguments RPAREN type LBRACE def_block return RBRACE
    (13) definition -> DEF VARIABLE LPAREN . empty_args RPAREN type LBRACE def_block return RBRACE
    (24) arguments -> . args
    (20) empty_args -> .
    (22) args -> . VARIABLE type COMMA args
    (23) args -> . VARIABLE type

    RPAREN          reduce using rule 20 (empty_args -> .)
    VARIABLE        shift and go to state 25

    arguments                      shift and go to state 29
    empty_args                     shift and go to state 30
    args                           shift and go to state 28

state 22

    (5) using -> USING PRINT SEMICOLON using .

    DECL            reduce using rule 5 (using -> USING PRINT SEMICOLON using .)
    DEF             reduce using rule 5 (using -> USING PRINT SEMICOLON using .)


state 23

    (6) using -> USING GETARRAY SEMICOLON using .

    DECL            reduce using rule 6 (using -> USING GETARRAY SEMICOLON using .)
    DEF             reduce using rule 6 (using -> USING GETARRAY SEMICOLON using .)


state 24

    (7) using -> USING CREATEARRAY SEMICOLON using .

    DECL            reduce using rule 7 (using -> USING CREATEARRAY SEMICOLON using .)
    DEF             reduce using rule 7 (using -> USING CREATEARRAY SEMICOLON using .)


state 25

    (22) args -> VARIABLE . type COMMA args
    (23) args -> VARIABLE . type
    (14) type -> . COLON TYPE_INT
    (15) type -> . COLON TYPE_FLOAT
    (16) type -> . COLON TYPE_VOID
    (17) type -> . COLON TYPE_STRING
    (18) type -> . COLON TYPE_BOOLEAN

    COLON           shift and go to state 32

    type                           shift and go to state 31

state 26

    (10) declaration -> DECL VARIABLE LPAREN arguments . RPAREN type

    RPAREN          shift and go to state 33


state 27

    (11) declaration -> DECL VARIABLE LPAREN empty_args . RPAREN type

    RPAREN          shift and go to state 34


state 28

    (24) arguments -> args .

    RPAREN          reduce using rule 24 (arguments -> args .)


state 29

    (12) definition -> DEF VARIABLE LPAREN arguments . RPAREN type LBRACE def_block return RBRACE

    RPAREN          shift and go to state 35


state 30

    (13) definition -> DEF VARIABLE LPAREN empty_args . RPAREN type LBRACE def_block return RBRACE

    RPAREN          shift and go to state 36


state 31

    (22) args -> VARIABLE type . COMMA args
    (23) args -> VARIABLE type .

    COMMA           shift and go to state 37
    RPAREN          reduce using rule 23 (args -> VARIABLE type .)


state 32

    (14) type -> COLON . TYPE_INT
    (15) type -> COLON . TYPE_FLOAT
    (16) type -> COLON . TYPE_VOID
    (17) type -> COLON . TYPE_STRING
    (18) type -> COLON . TYPE_BOOLEAN
